# cmentalizer

./: .gitignore  build_linux_x64_debug.sh  build_linux_x64_release.sh  icon.svg.import  project.godot  variables.sh  variables_linux_gnu.sh
addons/multi_client/scenes/: MultiClientControl.tscn  MultiClientWindow.tscn
godot/: .gitignore  main.tscn  project.godot
godot/plugins/: rust-src.gdextension
godot/scenes/autoloads/network/: network_entry.tscn
godot/scenes/game_modes/: TestGameMode.tscn
godot/scenes/player/: PlayerEntity.tscn
godot/scripts/state_machine/: state.gd  state_machine.gd
libs/: ..gitignore
plugins/: rust-src.gdextension
rust-src/: Cargo.toml
rust-src/src/: example.rs  lib.rs
rust-src/src/addons/: mod.rs
rust-src/src/addons/multi_client/: mod.rs
rust-src/src/addons/multi_client_runner/: main_multi_client.rs  main_multi_client_ui.rs  mod.rs  process_runner.rs
rust-src/src/gameframework/: game_input.rs  game_stats.rs  mod.rs  player_body_controller.rs  player_controller.rs  player_entity.rs  simple_player_spawner.rs  test_gamemode.rs
rust-src/src/network/: mod.rs
rust-src/src/network/entrypoint/: enet_client.rs  enet_host.rs  enet_listener.rs  enet_participant.rs  mod.rs  network_construct_data.rs  network_entry_point.rs  utils.rs
rust-src/src/ui/: mod.rs
rust-src/src/ui/validators/: max_validator.rs  min_validator.rs  mod.rs  regex_validator.rs  validators_holder.rs
rust-src/src/ui/validators/validator_consumers/: line_edit_validator_consumer.rs  mod.rs
rust-src/src/ui/wrappers/: mod.rs  regex_line_edit_wrapper.rs
(+10 files in other folders)
