[package]
name = "rust-src"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["experimental-threads"] }
anyhow = { version = "1.0", default-features = false }
thiserror = "1.0"

[rust]
debug=true
